--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,23 @@
-<h1>New Article</h1>
+<div class="container text-center">
+  <div class="row">
+    <div class="col col-3"></div>
 
-<%= render "form", article: @article %>
+    <div class="col col-6">
+
+        <div class="card">
+        <h3 class="card-header">New Article</h3>
+        <div class="card-body">
+            <div class="container text-start">
+            <p class="card-text">
+
+                <%= render "form", article: @article %>
+                
+            </p>
+            </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="col col-3"></div>
+  </div>
+</div>
