--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,68 @@
-<h1><%= @article.title %></h1>
-This article has <%= @article.comments.public_count %> comments and counting!
 
-<p><%= @article.body %></p>
+<div class="container-fluid text-center">
+<div class="row">
+    <div class="col col-4">
+      <div class="card">
+        <h3 class="card-header"><%= @article.title %></h3>
+        <div class="card-body text-start">
+          <h6 class="card-title text-center">This article has <%= @article.comments.public_count %> comments and counting!</h6>
+          <p class="card-text">
+            
+            <%= @article.body %>
+            <hr>
+              <%= link_to "Edit", edit_article_path(@article), :class => "btn btn-primary btn-sm" %>
+              <%= link_to "Delete", article_path(@article), data: {
+                                turbo_method: :delete,
+                                turbo_confirm: "Delete Article?"
+                              }, :class => "btn btn-primary btn-sm" %>
 
-<ul>
-  <li><%= link_to "Edit", edit_article_path(@article) %></li>
-  <li><%= link_to "Destroy", article_path(@article), data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %></li>
-</ul>
+          </p>
+        </div>
+      </div>
+  
+    <br>
+    <div class="card">
+      <h3 class="card-header">Add a Comment</h3>
+      <div class="card-body">
+        <p class="card-text">
 
-<h2>Comments</h2>
-<%= render @article.comments %>
+        <%= render 'comments/form' %>
 
-<h2>Add a comment:</h2>
-<%= render 'comments/form' %>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col col-8">
+    <div class="card">
+      <h3 class="card-header">Comments</h3>
+      <div class="card-body">
+        <p class="card-text">
+
+          <% if @article.comments.count > 0 %>
+            <table class="table table-striped">
+            <thead>
+              <th>ID</th>
+              <th>Commeneter</th>
+              <th>Comment</th>
+              <th>Status</th>
+              <th>Created</th>
+              <th>Updated</th>
+              <th>Action</th>
+            </thead>
+
+              <%= render @article.comments %>
+
+            <tbody>
+            </tbody>
+            </table>
+          <% else %>
+            No comments yet.
+          <% end %>
+
+        </p>
+      </div>
+    </div>
+  </div>
+
+</div>
