--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,18 +1,20 @@
 <% unless comment.archived? %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
 
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.body %>
-  </p>
+  <% if comment.commenter %>
+    <tr>
+      <td><%= comment.id %></td>
+      <td><%= comment.commenter %></td>
+      <td><%= comment.body %></td>
+      <td><%= comment.status %></td>
+      <td><%= comment.created_at.strftime("%Y-%m-%d: %H:%M:%S") %></td>
+      <td><%= comment.updated_at %></td>
+      <td>
+        <%= link_to "Delete", [comment.article, comment], data: {
+              turbo_method: :delete,
+              turbo_confirm: "Delete Comment?"
+            }, :class => "btn btn-primary btn-sm" %>
+      </td>
+    </tr>
+  <% end %>
 
-  <p>
-    <%= link_to "Destroy Comment", [comment.article, comment], data: {
-                  turbo_method: :delete,
-                  turbo_confirm: "Are you sure?"
-                } %>
-  </p>
 <% end %>
