--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,7 @@
     <div class="container-fluid py-5  text-center">
         <h1 class="display-5 fw-bold">Welcome to BLOGGER</h1>
         <div class="fs-4 text-center">This is the home page for the BLOGGER application.</div><br>
-        <button class="btn btn-primary btn-lg" type="button">Sign Up Now!</button>
+        <%= link_to "Sign Up Now!", signup_path, class: "btn btn-primary btn-lg" %>
+
     </div>
 </div>
