--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,9 @@
             <%= link_to "Articles", articles_path, :class => "nav-link active" %> 
         </li>
         <li class="nav-item">
+            <%= link_to "Users", users_path, :class => "nav-link active" %> 
+        </li>
+        <li class="nav-item">
             <%= link_to "Help", static_pages_help_path, :class => "nav-link active" %> 
         </li>
       </ul>
