--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -43,7 +43,7 @@
             <table class="table table-striped">
             <thead>
               <th>ID</th>
-              <th>Commeneter</th>
+              <th>Commenter</th>
               <th>Comment</th>
               <th>Status</th>
               <th>Created</th>
