--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -7,7 +7,7 @@
       <td><%= comment.body %></td>
       <td><%= comment.status %></td>
       <td><%= comment.created_at.strftime("%Y-%m-%d: %H:%M:%S") %></td>
-      <td><%= comment.updated_at %></td>
+      <td><%= comment.updated_at.strftime("%Y-%m-%d: %H:%M:%S") %></td>
       <td>
         <%= link_to "Delete", [comment.article, comment], data: {
               turbo_method: :delete,
