--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container-fluid">
+      <%= render 'shared/flash_messages' %>
       <br>
       <%= yield %>
     </div>
