--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,32 @@
         <li class="nav-item">
             <%= link_to "Help", static_pages_help_path, :class => "nav-link active" %> 
         </li>
+        <% if logged_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Account <b class="nav-link active caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Profile", current_user %></li>
+            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+            <li class="divider"></li>
+            <li>
+            <%= link_to "Logout", logout_path, :class => "nav-link active" %>
+            </li>
+          </ul>
+        </li>
+
+          <li class="nav-item">
+              <%= link_to current_user.name, current_user, :class => "nav-link active" %> 
+          </li>
+          <li class="nav-item">
+              <%= link_to "Logout", logout_path, :class => "nav-link active" %> 
+          </li>
+        <% else %>
+          <li class="nav-item">
+              <%= link_to "Login", login_path, :class => "nav-link active" %> 
+          </li>
+        <% end %>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
