--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,18 @@
 
   <body>
     <%= render 'layouts/header' %>
+
+    <% if !flash.empty? %>
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %> alert-dismissible fade show" role="alert">
+          <%= message %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <% end %>
+    <% else %>
+      <% flash.clear %>
+    <% end %>
+
     <div class="container-fluid">
       <br>
       <%= yield %>
