--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,26 +17,19 @@
             <%= link_to "Help", static_pages_help_path, :class => "nav-link active" %> 
         </li>
         <% if logged_in? %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Account <b class="nav-link active caret"></b>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <%= current_user.name %>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Profile", current_user %></li>
-            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+            <li><%= link_to "Profile", current_user, :class => "nav-link active" %></li>
+            <li><%= link_to "Settings", edit_user_path(current_user), :class => "nav-link active" %></li>
             <li class="divider"></li>
             <li>
             <%= link_to "Logout", logout_path, :class => "nav-link active" %>
             </li>
           </ul>
         </li>
-
-          <li class="nav-item">
-              <%= link_to current_user.name, current_user, :class => "nav-link active" %> 
-          </li>
-          <li class="nav-item">
-              <%= link_to "Logout", logout_path, :class => "nav-link active" %> 
-          </li>
         <% else %>
           <li class="nav-item">
               <%= link_to "Login", login_path, :class => "nav-link active" %> 
