--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -13,8 +13,8 @@
 <% end %>
 
 <% if error %>
-    <div class="alert alert-alert alert-dismissible fade show" role="alert">
-        <%= alert %>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <%= error %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% end %>
