--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,8 @@
       <p class="card-text">
         <table class="table table-striped">
         <thead>
-          <th>ID</th>
+          <th>ArticleID</th>
+          <th>UserID</th>
           <th>Title</th>
           <th>Body</th>
           <th>Status</th>
@@ -20,6 +21,7 @@
           <% unless article.archived? %>
             <tr>
               <td><%= article.id %></td>
+              <td><%= article.user_id %></td>
               <td><%= link_to article.title, article %></td>
               <td><%= article.body.first(20)... %></td>
               <td><%= article.status %></td>
