--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,7 @@
       <div class="card">
         <h3 class="card-header"><%= @article.title %></h3>
         <div class="card-body text-start">
+          <h6 class="card-title text-center">Author: <%= @article.user.name %></h6>
           <h6 class="card-title text-center">This article has <%= @article.comments.public_count %> comments and counting!</h6>
           <p class="card-text">
             
