--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,33 +1,36 @@
-
 <div class="container-fluid text-center">
 <div class="row">
     <div class="col col-4">
       <div class="card">
-        <h3 class="card-header"><%= @article.title %></h3>
+        <h5 class="card-header"><%= @article.title %></h5>
         <div class="card-body text-start">
           <h6 class="card-title text-center">Author: <%= @article.user.name %></h6>
+          <h6 class="card-title text-center text-secondary"><small><i>Created: <%= @article.created_at.strftime("%Y-%m-%d: %H:%M:%S") %> | Updated: <%= @article.updated_at.strftime("%Y-%m-%d: %H:%M:%S") %></i></small></h6>
           <h6 class="card-title text-center">This article has <%= @article.comments.public_count %> comments and counting!</h6>
           <p class="card-text">
             
-            <%= @article.body %>
-            <hr>
+            <div class="alert alert-dark" role="alert">
+              <%= @article.body %>
+            </div>
+            <% if current_user.id == @article.user_id %>
+              <hr>
               <%= link_to "Edit", edit_article_path(@article), :class => "btn btn-primary btn-sm" %>
               <%= link_to "Delete", article_path(@article), data: {
                                 turbo_method: :delete,
                                 turbo_confirm: "Delete Article?"
                               }, :class => "btn btn-primary btn-sm" %>
-
+            <% end %>
           </p>
         </div>
       </div>
   
     <br>
     <div class="card">
-      <h3 class="card-header">Add a Comment</h3>
+      <h5 class="card-header">Add a Comment</h5>
       <div class="card-body">
         <p class="card-text">
 
-        <%= render 'comments/form' %>
+          <%= render 'comments/form' %>
 
         </p>
       </div>
@@ -36,9 +39,9 @@
 
   <div class="col col-8">
     <div class="card">
-      <h3 class="card-header">Comments</h3>
+      <h5 class="card-header">Comments</h5>
       <div class="card-body">
-        <p class="card-text">
+        <p class="card-text fs-6">
 
           <% if @article.comments.count > 0 %>
             <table class="table table-striped">
@@ -48,7 +51,7 @@
               <th>Comment</th>
               <th>Status</th>
               <th>Created</th>
-              <th>Updated</th>
+             
               <th>Action</th>
             </thead>
 
