--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
-  <div class="card">
+  <div class="card text-bg-secondary">
     <h4 class="card-header">Articles</h4>
     <div class="card-body">
       <h6 class="card-title">Our blog has <%= Article.public_count %> articles and counting!</h6>
