--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       <%= render 'shared/flash_messages' %>
       <br>
       <%= yield %>
+      <%= render 'layouts/footer' %>
     </div>
   </body>
 </html>
