--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container text-center">
-  <div class="card">
+  <div class="card text-bg-secondary">
     <h4 class="card-header">Users</h4>
     <div class="card-body">
       <h6 class="card-title">Our blog has <%= User.count %> users and counting!</h6>
