--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 
     <div class="col col-6">
 
-        <div class="card">
+        <div class="card text-bg-secondary">
         <h3 class="card-header">Sign Up</h3>
         <div class="card-body">
             <div class="container text-start">
