--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,31 @@
 <div class="container-fluid text-center">
 <div class="row">
     <div class="col col-4">
-      <div class="card">
+      <div class="card text-bg-secondary">
         <h5 class="card-header"><%= @article.title %></h5>
         <div class="card-body text-start">
-          <h6 class="card-title text-center">Author: <%= @article.user.name %></h6>
-          <h6 class="card-title text-center text-secondary"><small><i>Created: <%= @article.created_at.strftime("%Y-%m-%d: %H:%M:%S") %> | Updated: <%= @article.updated_at.strftime("%Y-%m-%d: %H:%M:%S") %></i></small></h6>
-          <h6 class="card-title text-center">This article has <%= @article.comments.public_count %> comments and counting!</h6>
+
+                  <div class="container text-center bg-secondary-subtle text-dark rounded"  style="width: 90%">
+                      <div class="row">
+                        <div class="col">
+                          <small>Author: <%= @article.user.name %></small>
+                        </div>
+                        <div class="col col-7">
+                          <small>Created: <%= @article.created_at.strftime("%Y-%m-%d: %H:%M:%S") %></small>
+                        </div>
+                      </div>
+                      <div class="row border-top border-dark-subtle">
+                        <div class="col">
+                        <small>Comments: <%= @article.comments.public_count %></small>
+                        </div>
+                        <div class="col col-7">
+                          <small>Updated: <%= @article.updated_at.strftime("%Y-%m-%d: %H:%M:%S") %></small>
+                        </div>
+                      </div>
+                  </div>
+
           <p class="card-text">
-            
-            <div class="alert alert-dark" role="alert">
+            <div class="alert alert-secondary">
               <%= @article.body %>
             </div>
             <% if current_user.id == @article.user_id %>
@@ -25,7 +41,7 @@
       </div>
   
     <br>
-    <div class="card">
+    <div class="card text-bg-secondary">
       <h5 class="card-header">Add a Comment</h5>
       <div class="card-body">
         <p class="card-text">
@@ -38,7 +54,7 @@
   </div>
 
   <div class="col col-8">
-    <div class="card">
+    <div class="card text-bg-secondary">
       <h5 class="card-header">Comments</h5>
       <div class="card-body">
         <p class="card-text fs-6">
