--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
             <%= current_user.name %>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Home", current_user, :class => "nav-link active" %></li>
+            <li><%= link_to "Account", current_user, :class => "nav-link active" %></li>
             <li><%= link_to "Settings", edit_user_path(current_user), :class => "nav-link active" %></li>
             <li class="divider"></li>
             <li>
@@ -41,5 +41,6 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
+    
   </div>
 </nav>
