--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,9 @@
 
         <div class="card text-bg-secondary">
         <h3 class="card-header">Sign Up</h3>
+
+        <% if not logged_in? %>
+
         <div class="card-body">
             <div class="container text-start">
             <p class="card-text">
@@ -52,6 +55,21 @@
             </div>
         </div>
 
+        <% else %>
+
+        <div class="card-body text-center">
+          <div class="container text-center">
+            <p class="card-text text-center">
+              <div class="row text-center">
+              <div class="col text-center">
+                <big>You already have an account and are logged in!</big>
+              </div>
+              </div>
+            </p>
+          </div>
+        </div>
+
+        <% end %>
     </div>
     <div class="col col-3"></div>
   </div>
